// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jenkins bot if job has scm data, include number of changes and repo name on the card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "items": Array [
            Object {
              "color": "Light",
              "text": "asgard",
              "type": "TextBlock",
              "wrap": true,
            },
            Object {
              "size": "Large",
              "spacing": "ExtraLarge",
              "text": "Job COMPLETED ☀️",
              "type": "TextBlock",
              "weight": "Bolder",
              "wrap": true,
            },
          ],
          "spacing": "None",
          "type": "Container",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "spacing": "None",
                  "text": "[1](http://localhost:8080/job/asgard/1/)",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "  |",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Status",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "SUCCESS",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "bleed": true,
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "SCM",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "[evgeny-goldin/asgard](https://github.com/evgeny-goldin/asgard)",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "spacing": "Small",
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Number of changes",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "3",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
          ],
          "spacing": "Small",
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Build Details",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/1/",
            },
            Object {
              "title": "All Changes",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/1/changes",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`jenkins bot when api request to wfapi fails, assume job did not partially fail 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "items": Array [
            Object {
              "color": "Light",
              "text": "asgard",
              "type": "TextBlock",
              "wrap": true,
            },
            Object {
              "size": "Large",
              "spacing": "ExtraLarge",
              "text": "Job COMPLETED ☀️",
              "type": "TextBlock",
              "weight": "Bolder",
              "wrap": true,
            },
          ],
          "spacing": "None",
          "type": "Container",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "spacing": "None",
                  "text": "[4](http://localhost:8080/job/asgard/4/)",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "  |",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Status",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "SUCCESS",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "bleed": true,
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "SCM",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "[evgeny-goldin/asgard](https://github.com/evgeny-goldin/asgard)",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "spacing": "Small",
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Build Details",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/4/",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`jenkins bot when task is completed, posts a card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "items": Array [
            Object {
              "color": "Light",
              "text": "asgard",
              "type": "TextBlock",
              "wrap": true,
            },
            Object {
              "size": "Large",
              "spacing": "ExtraLarge",
              "text": "Job COMPLETED ☀️",
              "type": "TextBlock",
              "weight": "Bolder",
              "wrap": true,
            },
          ],
          "spacing": "None",
          "type": "Container",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "spacing": "None",
                  "text": "[1](http://localhost:8080/job/asgard/1/)",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "  |",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Status",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "SUCCESS",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Build Details",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/1/",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`jenkins bot when task is finalized, posts a card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Accent",
                  "text": "asgard",
                  "type": "TextBlock",
                  "weight": "Lighter",
                },
                Object {
                  "color": "Light",
                  "size": "Large",
                  "spacing": "Small",
                  "text": "Job FINALIZED",
                  "type": "TextBlock",
                  "weight": "Bolder",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number:",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "Status:",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 35,
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "[1](http://localhost:8080/job/asgard/1/)",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "SUCCESS",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 65,
            },
          ],
          "horizontalAlignment": "Center",
          "spacing": "Padding",
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Open in Jenkins",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/1/",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`jenkins bot when the job completes and there is commit data, shows the commit message author and sha 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "items": Array [
            Object {
              "color": "Light",
              "text": "asgard",
              "type": "TextBlock",
              "wrap": true,
            },
            Object {
              "size": "Large",
              "spacing": "ExtraLarge",
              "text": "Job COMPLETED ☀️",
              "type": "TextBlock",
              "weight": "Bolder",
              "wrap": true,
            },
          ],
          "spacing": "None",
          "type": "Container",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "spacing": "None",
                  "text": "[3](http://localhost:8080/job/asgard/3/)",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "  |",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Status",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "SUCCESS",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "bleed": true,
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "SCM",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "[evgeny-goldin/asgard](https://github.com/evgeny-goldin/asgard)",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "spacing": "Small",
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Number of changes",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "55",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
          ],
          "spacing": "Small",
          "type": "ColumnSet",
        },
        Object {
          "items": Array [
            Object {
              "items": Array [
                Object {
                  "columns": Array [
                    Object {
                      "items": Array [
                        Object {
                          "text": "[3b7b6ad](https://github.com/evgeny-goldin/asgard/commit/3b7b6adc2d5e43b037cc0281d1bd3702c5f6b04e)",
                          "type": "TextBlock",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "auto",
                    },
                    Object {
                      "items": Array [
                        Object {
                          "color": "light",
                          "horizontalAlignment": "Center",
                          "text": "|",
                          "type": "TextBlock",
                        },
                      ],
                      "spacing": "None",
                      "type": "Column",
                      "width": "auto",
                    },
                    Object {
                      "items": Array [
                        Object {
                          "text": "[Octavia_West38](mailto:Letha_Boyer@gmail.com)",
                          "type": "TextBlock",
                          "wrap": true,
                        },
                      ],
                      "spacing": "None",
                      "type": "Column",
                      "width": "auto",
                    },
                  ],
                  "type": "ColumnSet",
                },
                Object {
                  "maxLines": 2,
                  "spacing": "None",
                  "text": "quantify redundant feed",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Container",
            },
            Object {
              "items": Array [
                Object {
                  "columns": Array [
                    Object {
                      "items": Array [
                        Object {
                          "text": "[f1becfe](https://github.com/evgeny-goldin/asgard/commit/f1becfeafc8082ad2bf852b738b4e087c1708abd)",
                          "type": "TextBlock",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "auto",
                    },
                    Object {
                      "items": Array [
                        Object {
                          "color": "light",
                          "horizontalAlignment": "Center",
                          "text": "|",
                          "type": "TextBlock",
                        },
                      ],
                      "spacing": "None",
                      "type": "Column",
                      "width": "auto",
                    },
                    Object {
                      "items": Array [
                        Object {
                          "text": "[Jaiden.Cassin](mailto:Jaquelin24@hotmail.com)",
                          "type": "TextBlock",
                          "wrap": true,
                        },
                      ],
                      "spacing": "None",
                      "type": "Column",
                      "width": "auto",
                    },
                  ],
                  "type": "ColumnSet",
                },
                Object {
                  "maxLines": 2,
                  "spacing": "None",
                  "text": "transmit haptic pixel",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Container",
            },
            Object {
              "items": Array [
                Object {
                  "columns": Array [
                    Object {
                      "items": Array [
                        Object {
                          "text": "[a70fcbe](https://github.com/evgeny-goldin/asgard/commit/a70fcbe362d8b51ec155b3db9d5b92dd8065af6f)",
                          "type": "TextBlock",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "auto",
                    },
                    Object {
                      "items": Array [
                        Object {
                          "color": "light",
                          "horizontalAlignment": "Center",
                          "text": "|",
                          "type": "TextBlock",
                        },
                      ],
                      "spacing": "None",
                      "type": "Column",
                      "width": "auto",
                    },
                    Object {
                      "items": Array [
                        Object {
                          "text": "[Ressie67](mailto:Casey_Wisoky@gmail.com)",
                          "type": "TextBlock",
                          "wrap": true,
                        },
                      ],
                      "spacing": "None",
                      "type": "Column",
                      "width": "auto",
                    },
                  ],
                  "type": "ColumnSet",
                },
                Object {
                  "maxLines": 2,
                  "spacing": "None",
                  "text": "compress back-end panel",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Container",
            },
            Object {
              "items": Array [
                Object {
                  "columns": Array [
                    Object {
                      "items": Array [
                        Object {
                          "text": "[28c9672](https://github.com/evgeny-goldin/asgard/commit/28c96728758e141d8a6b102a9ff8dec7832c9cc0)",
                          "type": "TextBlock",
                          "wrap": true,
                        },
                      ],
                      "type": "Column",
                      "width": "auto",
                    },
                    Object {
                      "items": Array [
                        Object {
                          "color": "light",
                          "horizontalAlignment": "Center",
                          "text": "|",
                          "type": "TextBlock",
                        },
                      ],
                      "spacing": "None",
                      "type": "Column",
                      "width": "auto",
                    },
                    Object {
                      "items": Array [
                        Object {
                          "text": "[Nichole.Schamberger](mailto:Rowland.Cronin@yahoo.com)",
                          "type": "TextBlock",
                          "wrap": true,
                        },
                      ],
                      "spacing": "None",
                      "type": "Column",
                      "width": "auto",
                    },
                  ],
                  "type": "ColumnSet",
                },
                Object {
                  "maxLines": 2,
                  "spacing": "None",
                  "text": "override primary bus",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Container",
            },
          ],
          "type": "Container",
        },
        Object {
          "size": "Small",
          "spacing": "Small",
          "text": "...and 51 more",
          "type": "TextBlock",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Build Details",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/3/",
            },
            Object {
              "title": "All Changes",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/3/changes",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`jenkins bot when the job fails, posts a card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "items": Array [
            Object {
              "color": "Light",
              "text": "asgard",
              "type": "TextBlock",
              "wrap": true,
            },
            Object {
              "size": "Large",
              "spacing": "ExtraLarge",
              "text": "Job COMPLETED 🌧️",
              "type": "TextBlock",
              "weight": "Bolder",
              "wrap": true,
            },
          ],
          "spacing": "None",
          "type": "Container",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "spacing": "None",
                  "text": "[1](http://localhost:8080/job/asgard/1/)",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "  |",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Status",
                  "type": "TextBlock",
                },
              ],
              "spacing": "None",
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "FAILURE",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "bleed": true,
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "SCM",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": "auto",
            },
            Object {
              "items": Array [
                Object {
                  "text": "[evgeny-goldin/asgard](https://github.com/evgeny-goldin/asgard)",
                  "type": "TextBlock",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "spacing": "Small",
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Build Details",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/1/",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`jenkins bot when the job is queued, but the build URL does not exist, only show the build number 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Accent",
                  "text": "asgard",
                  "type": "TextBlock",
                  "weight": "Lighter",
                },
                Object {
                  "color": "Light",
                  "size": "Large",
                  "spacing": "Small",
                  "text": "Job QUEUED",
                  "type": "TextBlock",
                  "weight": "Bolder",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number:",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 35,
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "16",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 65,
            },
          ],
          "horizontalAlignment": "Center",
          "spacing": "Padding",
          "type": "ColumnSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`jenkins bot when the job is queued, posts a card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Accent",
                  "text": "asgard",
                  "type": "TextBlock",
                  "weight": "Lighter",
                },
                Object {
                  "color": "Light",
                  "size": "Large",
                  "spacing": "Small",
                  "text": "Job QUEUED",
                  "type": "TextBlock",
                  "weight": "Bolder",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number:",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 35,
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "[16](http://localhost:8080/job/asgard/16/)",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 65,
            },
          ],
          "horizontalAlignment": "Center",
          "spacing": "Padding",
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Open in Jenkins",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/16/",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`jenkins bot when the job partially fails, posts a card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Accent",
                  "text": "asgard",
                  "type": "TextBlock",
                  "weight": "Lighter",
                },
                Object {
                  "color": "Light",
                  "size": "Large",
                  "spacing": "Small",
                  "text": "Job COMPLETED ⛅",
                  "type": "TextBlock",
                  "weight": "Bolder",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number:",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "Status:",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 35,
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "[2](http://localhost:8080/job/asgard/2/)",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "SUCCESS",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 65,
            },
          ],
          "horizontalAlignment": "Center",
          "spacing": "Padding",
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "See the Console Output",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/2/console",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;
